update for RN 2022-3

--- a/releases/point-2022-3.md
+++ b/releases/point-2022-3.md
@@ -10,7 +10,7 @@ description: This article lists improvements and bug fixes in SysKit Point versi
 
 **Build number:** 120
 
-**Release date:** May 13, 2022
+**Release date:** May 19, 2022
 
 ## Get the Latest Version
 
@@ -21,10 +21,9 @@ description: This article lists improvements and bug fixes in SysKit Point versi
 [![](https://aka.ms/deploytoazurebutton)](https://portal.azure.com/#create/Microsoft.Template/uri/https%3A%2F%2Fsyskitassetsstorage.blob.core.windows.net%2Fpoint%2FUpdateFilesARM%2FPointUpdateTemplate.json)
 
 See detailed step-by-step instructions on how to upgrade SysKit Point in the [upgrade article](../installation/upgrade-syskit-point.md).
-
 ## Features
 * **SysKit Point provisioning templates allow choosing metadata columns** to include additional attributes when generating reports.
-    * The metadata columns available in the dropdown menu provide:
+    * The metadata columns available in the dropdown menu enable:
         * **Setting custom values**
         * **Users can define and fill in the value when creating a request**
         * **The ability to create and edit new metadata columns**
@@ -37,7 +36,7 @@ See detailed step-by-step instructions on how to upgrade SysKit Point in the [up
         * The Service Account audit logs **won’t be stored**.
         * The Service Account changes **will be ignored and won’t trigger alerts**.
     * Read more about **how to Ignore Service accounts here**.
-* **Added the ability to remove Sharing links** when generating the report.
+* **Added the ability to remove All Sharing links** on the Sharing Links report.
     * Select All feature available for removing all links attached to a certain Site.
 * **Configuration Inventory Module (CIM) settings have been added to SysKit Point**.
     * Additional feature added that allows selecting who receives the CIM email.
@@ -45,37 +44,36 @@ See detailed step-by-step instructions on how to upgrade SysKit Point in the [up
 
 ## Improvements & Bug Fixes
 
-* **Emails sent by SysKit Point now have customized dynamic subject field**.
-     * The subject line shows the context of the email; for example, Communication site is inactive.
+* **Fixed an issue** with the {groupName} variable used in the Lifecycle Management e-mail subject.
+   * If the subject line was customized, the variable was not resolved properly.
+
 * **Improved the loading speed** for Access Review Options, **improved the functionality** of the preview email and dialogue on **the Access Review Options page**.
 * **Improved performance** for Privileged Identity Management (PIM).
-    * Privileged Identity Management (PIM) allows some users to assign themselves Global Admin rights for a limited amount of time.
-    * Global Admin sync improved to occurs every 4 minutes. 
-    * Fixed a bug where AAD groups weren’t taken into account for PMI if some members of those groups had administrative roles assigned.
-* **Improved speed and performance** for the One Drive tile when accessing through User details.
+    * **Privileged Identity Management (PIM)** allows some users to assign themselves Global Admin rights for a limited amount of time.
+    * **Global Admin sync** improved to occur every 4 minutes. 
+    * **Fixed a bug** where AAD groups weren’t taken into account for PIM if some members of those groups had administrative roles assigned.
+* **Improved speed and performance** for the OneDrive tile when accessing through User details.
 * **Optimized speed and performance** when loading the Lifecycle Management details screen.
 * **Improved speed** for loading the Overview tile when accessing the Private Channel details screen.
-* **Improved messaging** when a Bad Request or Internal server error occurs that provides more insight into the issue that occurred when more information is available.
 * **Improved Access Review feature** to include exact dates when accessing the PR History Details Overview.
   * Names of columns changed to include Status, Performed On and Performed By.
     * Status bar states whether the action was Completed or Expired, and hovering above it provides information on who completed the task.
 * **Improved speed** for accessing the Lifecycle Management Email Preview.
 * **Fixed a bug** where the New Update Available ribbon was showing even after updating SysKit Point to the newest version.
-* **Fixed a bug** where the loading screen was cut off generating the details report.
+* **Fixed a bug** where the loading screen was cut off when generating a Site’s Access Review details report.
     * Once loading was completed, the report would be unresponsive when trying to select lines.
-* **Fixed an issue** where an error message was shown after opening the Details screen on Alerts.
+* **Fixed an issue** where a `Bad Request` error message was shown after opening the Details screen on Alerts.
 * **Fixed an issue** where removing members from a Group or Team through Microsoft 365 portal doesn’t sync properly.
     * When all members from a group or team are removed, and the group or team is empty after syncing, SysKit Point didn’t update that action and left all the members that were there from the previous sync.
-* **Fixed a bug** where workdays wouldn’t show when scheduling an Access Review using 2k resolution.
-    * When trying to schedule an Access Review and entering the number of workdays allowed to complete the request, the number wouldn’t show in the selection box when using 2k resolution (2560x1440).
-* **Fixed an issue** where a large quantity of deleted groups caused problems with the automatic sync function.
-    * The automatic sync would process groups, and if a tenant has more than 1000 deleted groups, upon seeing they are deleted, the sync action would be canceled, and the state reverted to idle.  
+* **Fixed a bug** where the number of workdays was not visible on the Access Review Options screen when viewed on a 2K resolution display.
+    * When setting up the Access Review and entering the number of workdays allowed to complete the request, the number wouldn’t show in the selection box when using 2k resolution (2560x1440).
+* **Fixed an issue** where the Group Sync would fail in environments with more than 1000 deleted Security Groups.
 * **Fixed a bug** where the Users overview showed additional users that no longer existed in the Azure Active Directory.
     * Users overview would show Orphaned users that were not detected as permanently deleted.
 * **Fixed an issue** where Sites Overview showed deleted sites as Active.
-* **Fixed an issue** with OneDrive delta sync, showing that almost all items are unique.
-    * After sync, all subitems of a folder would show as having unique permission, even though that was not the actual state of them on SysKit Point.
-* **Fixed a bug** where exporting a report for All Sites as an XLSX file failed due to detecting invalid characters.
-* **Fixed an issue** where using symbols, for example, &!@#, when creating a new team would show an error and crash the provisioning.
-* **Fixed an issue** when trying to change admins for One Drive by going to Users > Sites > User Access didn’t show current admins, and the only option was to cancel the action.
-
+* **Fixed an issue** with OneDrive sync, resulting in erroneously displaying items as having unique permissions.
+    * After sync, all items in a folder would show as having unique permissions, even though that was not their actual state in OneDrive.
+* **Fixed a bug** where exporting a report for All Sites as an XLSX file failed due to invalid characters.
+* **Fixed an issue** where the provisioning of Microsoft Teams and Microsoft 365 Groups would fail if specific characters - for example, &,!,@, or # - were used as a part of the Team/ Group Name when requesting a new workspace in the SysKit Point Teams app.
+* **Fixed an issue** when trying to change admins for OneDrive by going to Users > Sites > User Access didn’t show current admins, and the only option was to cancel the action.
+* **Various UX/UI improvements and minor fixes** are available.
