--- a/releases/point-2022-5.md
+++ b/releases/point-2022-5.md
@@ -14,6 +14,8 @@ description: This article lists new features, improvements, and bug fixes in Sys
 
 ## Get the Latest Version
 
+### SysKit Point
+
 * **New to SysKit Point?** Get the latest SysKit Point version from [Azure Marketplace](https://azuremarketplace.microsoft.com/en-us/marketplace/apps/syskitltd.syskit_point).<br/>
     Find all steps described in detail in the [deployment article](../installation/deploy-syskit-point.md).
     
@@ -22,6 +24,7 @@ description: This article lists new features, improvements, and bug fixes in Sys
 
 See detailed step-by-step instructions on how to upgrade SysKit Point in the [upgrade article](../installation/upgrade-syskit-point.md).
 
+### Configuration Inventory Module
 * **Want to try out the Configuration Inventory module?** [Contact us](https://www.syskit.com/contact-us/).
 
 * **Already using the Configuration Inventory module?** Upgrade to the latest version. <br/>
