--- a/docs/point-collaborators/resolve-governance-tasks/access-review.mdx
+++ b/docs/point-collaborators/resolve-governance-tasks/access-review.mdx
@@ -271,8 +271,7 @@ The Access Review cycle will repeat based on the schedule defined by the Syskit 
 
 * **Watch this short video for a quick start on Access Review tasks in Syskit Point**.
 
-[Watch the video: Access Review tasks in Syskit Point](https://www.youtube.com/embed/Jku8GqPifvI?si=YpNBlu2TrLY47JCn)
-
+<iframe width="560" height="315" src="https://www.youtube.com/embed/Jku8GqPifvI?si=anlKSJvVP9m2bjfj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
 
 ## Related Topics
 
