--- a/docs/point-collaborators/resolve-governance-tasks/access-review.mdx
+++ b/docs/point-collaborators/resolve-governance-tasks/access-review.mdx
@@ -287,4 +287,4 @@ The Access Review cycle will repeat based on the schedule defined by the Syskit 
 
 For information on performing **Lifecycle Management tasks as a Syskit Point Collaborator**, take a look at the following article:
 
-* [Perform Lifecycle Management Tasks](lifecycle-management.md)
+* [Perform Lifecycle Management Tasks](lifecycle-management.mdx)
