--- a/docs/point-collaborators/resolve-governance-tasks/lifecycle-management.mdx
+++ b/docs/point-collaborators/resolve-governance-tasks/lifecycle-management.mdx
@@ -124,10 +124,20 @@ They can be found on the **My Tasks screen** under the Active Lifecycle Manageme
 
 * **Watch this short video for a quick start on Lifecycle Management tasks in Syskit Point**.
 
-[Watch the video: Lifecycle Management tasks in Syskit Point](https://www.youtube.com/embed/VnUb48kjYeo?si=-DIiVUQbyH500A6o)
+<div style={{position: 'relative', paddingBottom: '56.25%', height: 0, overflow: 'hidden', maxWidth: '100%', background: '#000'}}>
+  <iframe 
+    src="https://www.youtube.com/embed/VnUb48kjYeo?si=jC9SId-f6EVVRNS3" 
+    title="YouTube video player" 
+    frameBorder="0" 
+    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" 
+    referrerPolicy="strict-origin-when-cross-origin" 
+    allowFullScreen
+    style={{position: 'absolute', top: 0, left: 0, width: '100%', height: '100%'}}
+  />
+</div>
 
 
 ## Related Topics
 
 * [Learn more about lifecycle management](https://docs.microsoft.com/en-us/microsoftteams/plan-teams-lifecycle)
-* [Learn how to Resolve Access Review Tasks](access-review.md)
+* [Learn how to Resolve Access Review Tasks](access-review.mdx)
