--- a/docs/point-collaborators/resolve-governance-tasks/access-review.mdx
+++ b/docs/point-collaborators/resolve-governance-tasks/access-review.mdx
@@ -282,3 +282,7 @@ The Access Review cycle will repeat based on the schedule defined by the Syskit 
     style={{position: 'absolute', top: 0, left: 0, width: '100%', height: '100%'}}
   />
 </div>
+
+## Related Topics
+
+* [Resolve Inactive Workspaces Tasks](inactive-workspaces.md)
